fixed navbar overflow in small screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,10 @@ a.emailAddress {
     display: none;
     text-align: center;
 }
+
+@media screen and (max-width: 550px) {
+    a.brand-logo,
+    a.sidenav-trigger i.material-icons {
+        font-size: 20px;
+    }
+}
